[package]
name = "popcorn-fx"
version = "0.8.1"
edition = "2021"
rust-version = "1.71"
publish = false
license-file = "../LICENSE"
description = "The main Popcorn FX package"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }
popcorn-fx-dlna = { path = "../popcorn-fx-dlna" }
popcorn-fx-platform = { path = "../popcorn-fx-platform" }
popcorn-fx-opensubtitles = { path = "../popcorn-fx-opensubtitles" }
popcorn-fx-torrent = { path = "../popcorn-fx-torrent" }
popcorn-fx-trakt = { path = "../popcorn-fx-trakt" }
popcorn-fx-vlc = { path = "../popcorn-fx-vlc" }

async-trait.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
derive_more.workspace = true
directories.workspace = true
futures.workspace = true
itertools.workspace = true
log.workspace = true
log4rs = { version = "1", features = ["console_writer", "rolling_file_appender", "compound_policy"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
url = "2.5.0"

[dev-dependencies]
popcorn-fx = { path = ".", features = ["ffi"] }
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

httpmock.workspace = true
reqwest.workspace = true
tempfile.workspace = true

[build-dependencies]
cbindgen = "0"

[features]
ffi = []