[package]
name = "popcorn-fx"
version = "0.8.2"
edition = "2021"
rust-version = "1.75"
publish = false
license-file = "../LICENSE"
description = "The main Popcorn FX package"

[[bin]]
name = "libfx"
path = "src/main.rs"

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }
popcorn-fx-opensubtitles = { path = "../popcorn-fx-opensubtitles" }
popcorn-fx-platform = { path = "../popcorn-fx-platform" }
popcorn-fx-players = { path = "../popcorn-fx-players" }
popcorn-fx-torrent = { path = "../popcorn-fx-torrent" }
popcorn-fx-trakt = { path = "../popcorn-fx-trakt" }

async-trait.workspace = true
byteorder.workspace = true
clap = { version = "4.5", features = ["derive"] }
derive_more.workspace = true
directories.workspace = true
fx-callback.workspace = true
fx-handle.workspace = true
itertools.workspace = true
log.workspace = true
log4rs = { version = "1.3", features = ["console_writer", "rolling_file_appender", "compound_policy"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "time", "signal"] }
tokio-util = { workspace = true }
url.workspace = true
protobuf = "3.7.1"

[dev-dependencies]
popcorn-fx = { path = "." }
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

httpmock.workspace = true
mockall.workspace = true
reqwest.workspace = true
tempfile.workspace = true

[build-dependencies]
protobuf-codegen = "3.7.1"
