[package]
name = "popcorn-fx"
version = "0.9.0"
edition = "2021"
rust-version = "1.75"
publish = false
license-file = "../LICENSE"
description = "The main Popcorn FX package"

[[bin]]
name = "libfx"
path = "src/main.rs"

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }
popcorn-fx-opensubtitles = { path = "../popcorn-fx-opensubtitles" }
popcorn-fx-platform = { path = "../popcorn-fx-platform" }
popcorn-fx-players = { path = "../popcorn-fx-players" }
popcorn-fx-trakt = { path = "../popcorn-fx-trakt" }

fx-callback.workspace = true
fx-handle.workspace = true
fx-torrent.workspace = true

async-trait.workspace = true
byteorder.workspace = true
clap = { version = "4.5", features = ["derive"] }
derive_more.workspace = true
directories.workspace = true
itertools.workspace = true
log.workspace = true
log4rs = { workspace = true, features = ["console_appender", "rolling_file_appender", "compound_policy"] }
protobuf.workspace = true
rustls = { version = "0.23", features = ["aws-lc-rs"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "time", "signal"] }
tokio-util = { workspace = true }
url.workspace = true

[dev-dependencies]
popcorn-fx = { path = "." }
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

httpmock.workspace = true
mockall.workspace = true
reqwest.workspace = true
tempfile.workspace = true

[build-dependencies]
protobuf-codegen = "3.7.1"
