[package]
name = "torrent-frostwire"
version = "0.4.0"
edition = "2021"
rust-version = "1.62"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx = { path = "../popcorn-fx-core" }
log = "0.4.16"

[build-dependencies]
cbindgen = "0.24.3"
